creating private chat
